# Estudos

DataScience/: Desafio_DadosClimaticos.ipynb
Otimização/Metaheuristicas/: AG_estudo.ipynb
Otimização/Metaheuristicas/TSP/: genetico.py  main.py  pyproject.toml  utils.py
