[tool.poetry]
name = "tsp"
version = "0.1.0"
description = ""
authors = ["eliel.silva <eliel.silva@enacom.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
basemap = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
